# Github-Bot

./: .codeguardian.yml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  codeguardian.yml
codeguardian/: __init__.py  main.py
codeguardian/analyzers/: __init__.py  base.py  code_quality.py  coverage.py  pr_quality.py
codeguardian/plugins/: __init__.py
codeguardian/plugins/documentation/: __init__.py  analyzer.py
codeguardian/plugins/security/: __init__.py
codeguardian/utils/: __init__.py  cache.py  config.py  github.py  logging.py  retry.py
docs/: configuration.md
tests/analyzers/: test_pr_quality.py
tests/plugins/: test_documentation_analyzer.py
tests/utils/: test_cache.py  test_retry.py
